--- a/style.css
+++ b/style.css
@@ -2,10 +2,12 @@
     width: 100%;
 }
 .profilePic{
-    border-radius: 20%;
+    border-radius: 50%;
+    width: 100%;
+    height: auto;
 }
 .bio{
-    width: 75%;
+    width: 70%;
 }
 .sidebar{
     width: 25%;
